--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,7 +8,7 @@
 
     <color name="colorSecondary">#616161</color>
     <color name="colorSecondaryDark">#373737</color>
-    <color name="colorSecondaryLight">#8e8e8e</color>
+    <color name="colorSecondaryLight">#158e8e8e</color>
 
     <color name="colorPrimaryText">#ffffff</color>
     <color name="colorSecondaryText">#ffffff</color>
