--- a/app/src/main/res/layout/inner_recycleview_card.xml
+++ b/app/src/main/res/layout/inner_recycleview_card.xml
@@ -16,6 +16,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0"
         app:srcCompat="@mipmap/ic_launcher" />
 
     <TextView
@@ -36,7 +37,7 @@
         android:layout_marginStart="24dp"
         android:layout_marginTop="8dp"
         android:text="REGISTRATION_NUMBER"
-        android:textColor="@color/colorSecondaryLight"
+        android:textColor="@color/colorSecondary"
         app:layout_constraintStart_toEndOf="@+id/id_instituction"
         app:layout_constraintTop_toBottomOf="@+id/id_student_name" />
 
@@ -54,9 +55,19 @@
         android:id="@+id/id_date"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="8dp"
         android:text="DATE"
-        app:layout_constraintStart_toEndOf="@+id/id_subject"
-        app:layout_constraintTop_toTopOf="@+id/id_subject" />
+        app:layout_constraintStart_toEndOf="@+id/id_instituction"
+        app:layout_constraintTop_toBottomOf="@+id/id_subject" />
+
+    <Button
+        android:id="@+id/buttonX"
+        android:layout_width="38dp"
+        android:layout_height="31dp"
+        android:layout_marginStart="40dp"
+        android:background="@android:drawable/ic_menu_close_clear_cancel"
+        app:layout_constraintStart_toEndOf="@+id/id_date"
+        app:layout_constraintTop_toBottomOf="@+id/id_subject" />
 
 </android.support.constraint.ConstraintLayout>
